Adds first boilerplate that works for the tag filter line. Currently with non real data but the structure is ready. (refs #37)

--- a/src/app/ui/tag-filter/tag-filter.component.css
+++ b/src/app/ui/tag-filter/tag-filter.component.css
@@ -10,3 +10,8 @@
     -webkit-box-shadow: 2px 2px 8px 2px #BEBEBE;
     box-shadow: 2px 2px 8px 2px #BEBEBE;
 }
+
+.specialTags {
+  padding: 4px;
+  margin-left: 4px;
+}
