Preparation for toggeling the style rules. Adds some clean code and helpers (refs #39).

--- a/src/app/ui/tag-filter/tag-filter.component.html
+++ b/src/app/ui/tag-filter/tag-filter.component.html
@@ -11,6 +11,7 @@
     [(ngModel)]="termsSelected"
     (add)="onAdd($event)"
     (remove)="onRemove($event)"
+    (change)="onChange($event)"
     (clear)="onClear()">
     <ng-template ng-optgroup-tmp let-item="item" let-item$="item$" let-index="index">
       <div *ngIf="item.group !== 'Andere'">
