--- a/src/app/ui/header/header.component.html
+++ b/src/app/ui/header/header.component.html
@@ -14,14 +14,14 @@
   <div class="navbar-expand ml-auto navbar-nav">
     <div class="navbar-nav">
       <a class="nav-item nav-link" routerLink="/imprint" routerLinkActive="active">Impressum</a>
-      <a class="nav-item nav-link" href="https://github.com/fhstp/highlighter-webapp" title="Github Project" target="_blank">
+      <a class="nav-item nav-link" href="https://github.com/fhstp/highlighter-webapp" title="Github Projekt" target="_blank">
         <i class="fa fa-github"></i>
       </a>
       <a class="nav-item nav-link" href="https://www.fhstp.ac.at/de/forschung/projekte/contractvis-der-assistent-fuers-kleingedruckte"
-        title="University Website" target="_blank">
+        title="Projektbeschreibung" target="_blank">
         <i class="fa fa-university"></i>
       </a>
-      <a class="nav-item nav-link" href="https://www.netidee.at/contractvis" title="Netidee Website" target="_blank">
+      <a class="nav-item nav-link" href="https://www.netidee.at/contractvis" title="ContractVis HighLighter wurde von der IPA netidee gefördert." target="_blank">
         <i class="fa fa-lightbulb-o"></i>
       </a>
     </div>
