--- a/src/app/ui/landing/landing.component.html
+++ b/src/app/ui/landing/landing.component.html
@@ -84,18 +84,18 @@
           </div>
 
           <div class="col-md-6">
-            <p class="blocksatz">1) Um das Tool zu nutzen musst du dir eine Web-Erweiterungen (englisch Web Extension) heruntergeladen und
+            <p class="blocksatz">1) Um das Tool zu nutzen musst du dir eine Web-Erweiterung (englisch Web Extension) heruntergeladen und
               installieren.
               Das Highlighter Tool kann derzeit im <strong class="blue_highlight">Google Chrome</strong> verwendet
               werden.
               <br /> <br /> Lade dir <a href="https://www.dropbox.com/s/xwngtk4o3zoxvui/Highlighter-0.0.0-chrome.zip?raw=1">hier</a>
-              die Web-Erweiterungen herunter.</p>
+              die Web-Erweiterung herunter.</p>
             <p class="info_box blocksatz">Gib folgenden Befehl in deine Adresszeile des Google Chromes ein: <strong
                 class="blue_highlight">chrome://extensions/</strong>.
               Du gelangst auf die Erweiterungen-Seite.</p>
             <p class="blocksatz">Wechsle in den Entwicklermode und ziehe nun die Zip-Datei, die du dir heruntergeladen
               hast in den Bereich.
-              Das Symbol der HighLighter Web-Erweiterungen erscheint in deiner Erweiterungen-Leiste neben dem Adressfeld. <br />
+              Das Symbol der HighLighter Web-Erweiterung erscheint in deiner Erweiterungen-Leiste neben dem Adressfeld. <br />
               Nun kannst du das HighLighter Tool nutzen und Texte damit analysieren. </p>
           </div>
         </div>
@@ -163,7 +163,7 @@
             <div class="col-md-6">
               <p class="blocksatz">1) Zuerst kannst du den ersten Rechtstext laden,
                 indem du ihn markierst und auf den HighLighter Button klickst.
-                Er wird dann unter dann in der Browser Extensions zwischengespeichert.
+                Er wird dann unter dann in der Web-Erweiterung (lokal auf deinem Computer) zwischengespeichert.
                 Du kannst die Kriterienauswahl schließen.
               </p>
             </div>
@@ -176,7 +176,7 @@
             <div class="col-md-6">
               <p class="blocksatz">
                 2) Gehe zum anderen Onlineshops,
-                markiere den zweiten Rechtstext und klicke auf den HighLighter Button um die Extension zu öffnen.
+                markiere den zweiten Rechtstext und klicke auf den HighLighter Button um die Web-Erweiterung zu öffnen.
               </p>
             </div>
           </div>
