reduce spacing so that less scrolling is necessary #3

--- a/src/app/subsites/viz/viz.component.html
+++ b/src/app/subsites/viz/viz.component.html
@@ -1,8 +1,8 @@
 <div class="containerAlt">
   <div class="row">
     <div class="col-md-12 filterSection">
-      <h5>Gesuchte Kriterien:</h5>
-      <p><small>In Klammer, die Anzahl der gefundenen Kriterien im Text / den Texten</small></p>
+      <h5>Gesuchte Kriterien:
+      <small>In Klammer, die Anzahl der gefundenen Kriterien im Text / den Texten</small></h5>
       <app-tag-filter></app-tag-filter>
     </div>
   </div>
