update web ext url; fix a typo

--- a/src/app/ui/landing/landing.component.html
+++ b/src/app/ui/landing/landing.component.html
@@ -88,8 +88,8 @@
               installieren.
               Das Highlighter Tool kann derzeit im <strong class="blue_highlight">Google Chrome</strong> verwendet
               werden.
-              <br /> <br /> Lade dir <a href="https://www.dropbox.com/s/xwngtk4o3zoxvui/Highlighter-0.0.0-chrome.zip?raw=1">hier</a>
-              die Web-Erweiterung herunter.</p>
+              <br /> <br /> Lade dir <a href="https://github.com/fhstp/highlighter-webextension/releases/download/v1/Highlighter-0.0.0-chrome.zip">hier
+              die HighLighter Web-Erweiterung</a> herunter.</p>
             <p class="info_box blocksatz">Gib folgenden Befehl in deine Adresszeile des Google Chromes ein: <strong
                 class="blue_highlight">chrome://extensions/</strong>.
               Du gelangst auf die Erweiterungen-Seite.</p>
@@ -109,7 +109,7 @@
           </div>
           <div class="col-md-6">
             <p class="blocksatz">
-              2) Navigiere zu den AGBs des Onlineshops. Markiere den den Rechtstext, den du mit HighLighter analysieren
+              2) Navigiere zu den AGBs des Onlineshops. Markiere den Rechtstext, den du mit HighLighter analysieren
               möchtest. Dann klicke auf den HighLighter Button in der Browser Leiste.
               Das Tool kopiert automatisch den Text in das Tool. Du brauchst nichts dazu tun.
             </p>
