fix typo; favicon improved for dark browser tab bar

--- a/src/app/ui/landing/landing.component.html
+++ b/src/app/ui/landing/landing.component.html
@@ -86,7 +86,7 @@
           <div class="col-md-6">
             <p class="blocksatz">1) Um das Tool zu nutzen musst du dir eine Web-Erweiterung (englisch Web Extension) heruntergeladen und
               installieren.
-              Das Highlighter Tool kann derzeit im <strong class="blue_highlight">Google Chrome</strong> verwendet
+              Das HighLighter Tool kann derzeit im <strong class="blue_highlight">Google Chrome</strong> verwendet
               werden.
               <br /> <br /> Lade dir <a href="https://github.com/fhstp/highlighter-webextension/releases/download/v1/Highlighter-0.0.0-chrome.zip">hier
               die HighLighter Web-Erweiterung</a> herunter.</p>
